--- a/index.html
+++ b/index.html
@@ -6,3 +6,15 @@
   <title>Página de Exenplo</title>
 <link rel="stylesheet" her="style.css">
 </heade>
+<body>
+  <header>
+    <h1>bem vindo!</h1>/h1>
+  </header>
+  <section>
+    <p>conteudo da seção.</p>
+  </section>
+  <footer>
+    <P>&copy;2024</P>
+  </footer>
+</body>
+</html>
