index.html correção

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html> 
 <html lang="pt-br">
-<heade>
-  <meta charset="UTF_8">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="widht=device-width, initial-acale=1.0">
-  <title>Página de Exenplo</title>
-<link rel="stylesheet" her="style.css">
-</heade>
+  <title>Página de Exemplo</title>
+<link rel="stylesheet" href="style.css">
+</header>
 <body>
   <header>
-    <h1>bem vindo!</h1>/h1>
+    <h1>bem vindo!</h1>
   </header>
   <section>
     <p>conteudo da seção.</p>
