--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>conteudo da seção.</p>
   </section>
   <footer>
-    <P>&copy;2024</P>
+    <P>&copy;2024</p>
   </footer>
 </body>
 </html>
